--- a/Rcode/length_age_comps/rec_ages.Rmd
+++ b/Rcode/length_age_comps/rec_ages.Rmd
@@ -28,7 +28,7 @@ Fleets:
 
 ```{r}
 # Load CA ages and format
-ca_ages_raw <- read_csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/raw/nonconfidential/CRFS_ages_yeye.csv")
+ca_ages_raw <- read_csv("../../Data/raw/nonconfidential/CRFS_ages_yeye.csv")
 
  # Rename columns to match nwfsc code inputs
 names(ca_ages_raw)[names(ca_ages_raw) == "Year"] <- "year"
@@ -43,7 +43,7 @@ ca_ages_raw$length <- ca_ages_raw$length/10
 ca_ages_raw <- as.data.frame(ca_ages_raw)
 
 # Load OR ages and format
-or_ages_raw <- read_csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/raw/nonconfidential/OR_non_standard_yelloweye_2009-2016_nonconfid.csv")
+or_ages_raw <- read_csv("../../Data/raw/nonconfidential/OR_non_standard_yelloweye_2009-2016_nonconfid.csv")
 
   # Rename columns to match nwfsc code inputs
 names(or_ages_raw)[names(or_ages_raw) == "YYYY"] <- "year"
@@ -55,12 +55,26 @@ names(or_ages_raw)[names(or_ages_raw) == "SampleLength"] <- "length"
 or_ages_raw$length <- or_ages_raw$length/10
 or_ages_raw <- as.data.frame(or_ages_raw)
 
+# Load WA ages and format
+wa_ages_raw <- read_csv("../../Data/raw/confidential/SD506.csv")
+  
+  # Rename columns 
+names(wa_ages_raw)[names(wa_ages_raw) == "SAMPLE_YEAR"] <- "year"
+names(wa_ages_raw)[names(wa_ages_raw) == "RECFIN_SPECIES_NAME"] <- "common_name"
+names(wa_ages_raw)[names(wa_ages_raw) == "RECFIN_SEX_CODE"] <- "sex"
+names(wa_ages_raw)[names(wa_ages_raw) == "USE_THIS_AGE"] <- "age"
+names(wa_ages_raw)[names(wa_ages_raw) == "RECFIN_LENGTH_MM"] <- "length"
+  # Change the sex column to U and fix length
+wa_ages_raw[,33] = "U"
+wa_ages_raw$length <- wa_ages_raw$length/10
+wa_ages_raw <- as.data.frame(wa_ages_raw)
+
 ```
 
 #Data processing: select and filter relevant data, then organize to match format of SS file. Then, load 2017 data and compare with bubble plots.
 
 
-CA_REC: CAAL, CDFW. We only need to find CDFW data starting in 2009 (John Budrick)
+CA_REC: CAAL, CDFW. We only need to find CDFW data starting in 2009 (John Budrick). Age Error 2
 
 *this data should pretty much exactly match, except we might have an Nsamps problem?*
 
@@ -86,11 +100,11 @@ ca_rec_caal <- data.frame(ca_rec_caal)
 colnames(ca_rec_caal) <- gsub("^u", "A", colnames(ca_rec_caal))
 
 # Save
-write.csv(ca_rec_caal, file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/ca_rec_caal.csv"))
+write.csv(ca_rec_caal, file.path("../../Data/processed/rec_comps/ca_rec_caal.csv"))
 
 # Comparison plots for 2009-2016
   # Read new data
-ca_rec_caal_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/ca_rec_caal.csv") |>
+ca_rec_caal_new <- read.csv("../../Data/processed/rec_comps/ca_rec_caal.csv") |>
   mutate(assessment = "Current") |>
   dplyr::select(year, assessment, A0:A65) |>
   tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "age", values_to = "freq") |>
@@ -102,7 +116,7 @@ ca_rec_caal_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/pro
   )
 
 # Read old data
-inputs_old <- r4ss::SS_read(dir = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "model", "2017_yelloweye_model_updated_ss3_exe"))
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
 ca_rec_caal_old <- inputs_old$dat$agecomp |>
   dplyr::filter(fleet == 3) |>
   mutate(assessment = "Previous") |>
@@ -126,16 +140,82 @@ comparison_plot_ca <- together_caal |>
 comparison_plot_ca
 
   #Save plot
-ggsave(plot = comparison_plot_ca, "ca_rec_caal_comparisons.png", path = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "Rcode", "length_age_comps"))
+ggsave(plot = comparison_plot_ca, "ca_rec_caal_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 ```
 
-CA_REC: MAAL, CDFW. We only need to find CDFW data starting in 2009 (John Budrick)
+CA_REC: MAAL, CDFW. We only need to find CDFW data starting in 2009 (John Budrick). Age Error 2
 
 ```{r}
+# Organize data into age bins. Make sure it's a single sex.
+ca_rec_maal <- get_raw_comps(
+  data = ca_ages_raw,
+  comp_bins = seq(0, 65, 1),
+  comp_column_name = "age",
+  input_n_method = "total_samples",
+  two_sex_comps = FALSE,
+  month = 7,
+  fleet = -3,
+  partition = 0,
+  ageerr = 2,
+  Lbin_lo = -1,
+  Lbin_hi = -1,
+  dir = NULL,
+  printfolder = "",
+  verbose = TRUE
+)
 
+# Make it a readable data frame
+ca_rec_maal <- data.frame(ca_rec_maal)
+colnames(ca_rec_maal) <- gsub("^unsexed\\.", "", colnames(ca_rec_maal))
+colnames(ca_rec_maal) <- gsub("^u", "A", colnames(ca_rec_maal))
+
+# Save
+write.csv(ca_rec_maal, file.path("../../Data/processed/rec_comps/ca_rec_maal.csv"))
+
+# Comparison plots for 2009-2016
+  # Read new data
+ca_rec_maal_new <- read.csv("../../Data/processed/rec_comps/ca_rec_maal.csv") |>
+  mutate(assessment = "Current") |>
+  dplyr::select(year, assessment, A0:A65) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("A", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age),
+  )
+
+# Read old data
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
+ca_rec_maal_old <- inputs_old$dat$agecomp |>
+  dplyr::filter(fleet == -3) |>
+  mutate(assessment = "Previous") |>
+  dplyr::select(year, assessment, Nsamp, `a0`:`a65`) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment, -Nsamp), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("^a", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age)
+  )
+
+  # Put the long data frames together and bubble plot!
+together <- rbind(ca_rec_maal_old, ca_rec_maal_new)
+together <- together[together$year >= 2009,]
+comparison_plot <- together |>
+  dplyr::filter(freq > 0) |>
+  ggplot2::ggplot(aes(x = year, y = age, col = assessment, size = freq)) +
+  ggplot2::geom_point(position = position_dodge(0.5)) +
+  ggtitle("CA_REC MAAL Comparison")
+comparison_plot
+  
+  #Save plot
+ggsave(plot = comparison_plot, "ca_rec_maal_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 ```
 
-OR_REC: CAAL, WDFW ager data. Starting in 1979
+OR_REC: CAAL, WDFW ager data. Starting in 1979. Age Error 1 AND 2????
+
+For OR ages, lets go with Age Error 1 (WDFW) for now...double check with Ali, but in the raw document, the LabID = 2, maybe meaning it was aged with NWFSC? Or did Ali say WDFW ages all their fish?
 
 ```{r}
 # Organize data into age bins conditional on length bins. Make sure it's a single sex.
@@ -159,11 +239,11 @@ or_rec_caal <- data.frame(or_rec_caal)
 colnames(or_rec_caal) <- gsub("^u", "A", colnames(or_rec_caal))
 
 # Save
-write.csv(or_rec_caal, file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/or_rec_caal.csv"))
+write.csv(or_rec_caal, file.path("../../Data/processed/rec_comps/or_rec_caal.csv"))
 
 # Comparison plots for 2009-2016
   # Read new data
-or_rec_caal_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/processed/rec_comps/or_rec_caal.csv") |>
+or_rec_caal_new <- read.csv("../../Data/processed/rec_comps/or_rec_caal.csv") |>
   mutate(assessment = "Current") |>
   dplyr::select(year, assessment, A0:A65) |>
   tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "age", values_to = "freq") |>
@@ -175,7 +255,7 @@ or_rec_caal_new <- read.csv("C:/Morgan's Stuff/Sebastes_ruberrimus_2025/Data/pro
   )
 
 # Read old data
-inputs_old <- r4ss::SS_read(dir = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "model", "2017_yelloweye_model_updated_ss3_exe"))
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
 or_rec_caal_old <- inputs_old$dat$agecomp |>
   dplyr::filter(fleet == 6) |>
   mutate(assessment = "Previous") |>
@@ -199,25 +279,214 @@ comparison_plot_ca <- together_caal |>
 comparison_plot_ca
 
   #Save plot
-ggsave(plot = comparison_plot_ca, "or_rec_caal_comparisons.png", path = file.path("C:/Morgan's Stuff/Sebastes_ruberrimus_2025", "Rcode", "length_age_comps"))
+ggsave(plot = comparison_plot_ca, "or_rec_caal_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 
 # there are two more ages present (31 and 17) I wonder why these were not included. It looks like they were aged all in the same way as the other ages for that year. New data?
 ```
 
-OR_REC: MAAL, WDFW ager data. Starting in 1979
+OR_REC: MAAL, WDFW ager data. Starting in 1979. Age Error 1 AND 2
 
 ```{r}
+# Organize data into age bins. Make sure it's a single sex.
+or_rec_maal <- get_raw_comps(
+  data = or_ages_raw,
+  comp_bins = seq(0, 65, 1),
+  comp_column_name = "age",
+  input_n_method = "total_samples",
+  two_sex_comps = FALSE,
+  month = 7,
+  fleet = -6,
+  partition = 0,
+  ageerr = 2,
+  Lbin_lo = -1,
+  Lbin_hi = -1,
+  dir = NULL,
+  printfolder = "",
+  verbose = TRUE
+)
 
+# Make it a readable data frame
+or_rec_maal <- data.frame(or_rec_maal)
+colnames(or_rec_maal) <- gsub("^unsexed\\.", "", colnames(or_rec_maal))
+colnames(or_rec_maal) <- gsub("^u", "A", colnames(or_rec_maal))
+
+# Save
+write.csv(or_rec_maal, file.path("../../Data/processed/rec_comps/or_rec_maal.csv"))
+
+# Comparison plots for 2009-2016
+  # Read new data
+or_rec_maal_new <- read.csv("../../Data/processed/rec_comps/or_rec_maal.csv") |>
+  mutate(assessment = "Current") |>
+  dplyr::select(year, assessment, A0:A65) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("A", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age),
+  )
+
+# Read old data
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
+or_rec_maal_old <- inputs_old$dat$agecomp |>
+  dplyr::filter(fleet == -6) |>
+  mutate(assessment = "Previous") |>
+  dplyr::select(year, assessment, Nsamp, `a0`:`a65`) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment, -Nsamp), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("^a", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age)
+  )
+
+  # Put the long data frames together and bubble plot!
+together <- rbind(or_rec_maal_old, or_rec_maal_new)
+together <- together[together$year >= 2009,]
+comparison_plot <- together |>
+  dplyr::filter(freq > 0) |>
+  ggplot2::ggplot(aes(x = year, y = age, col = assessment, size = freq)) +
+  ggplot2::geom_point(position = position_dodge(0.5)) +
+  ggtitle("OR_REC MAAL Comparison")
+comparison_plot
+  
+  #Save plot
+ggsave(plot = comparison_plot, "or_rec_maal_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 ```
 
-WA_REC: CAAL, WDFW ager data. Starting in 1998. includes MRFSS and OSP
+WA_REC: CAAL, WDFW ager data. Starting in 1998. includes MRFSS and OSP. Age Error 1
 
 ```{r}
+# Organize data into age bins conditional on length bins. Make sure it's a single sex.
+wa_rec_caal <- get_raw_caal(
+  data = wa_ages_raw,
+  len_bins = seq(10, 74, 2),
+  age_bins = seq(0, 65, 1),
+  length_column_name = "length",
+  age_column_name = "age",
+  month = 7,
+  fleet = 7,
+  partition = 0,
+  ageerr = 1,
+  dir = NULL,
+  printfolder = "",
+  verbose = TRUE
+)
+
+# Make it a readable data frame
+wa_rec_caal <- data.frame(wa_rec_caal)
+colnames(wa_rec_caal) <- gsub("^u", "A", colnames(wa_rec_caal))
+
+# Save
+write.csv(wa_rec_caal, file.path("../../Data/processed/rec_comps/wa_rec_caal.csv"))
+
+# Comparison plots for 1998-2024
+  # Read new data
+wa_rec_caal_new <- read.csv("../../Data/processed/rec_comps/wa_rec_caal.csv") |>
+  mutate(assessment = "Current") |>
+  dplyr::select(year, assessment, A0:A65) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("A", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age),
+  )
+
+# Read old data
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
+wa_rec_caal_old <- inputs_old$dat$agecomp |>
+  dplyr::filter(fleet == 7) |>
+  mutate(assessment = "Previous") |>
+  dplyr::select(year, assessment, Nsamp, `a0`:`a65`) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment, -Nsamp), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("^a", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age)
+  )
+
+  # Put the long data frames together and bubble plot!
+together <- rbind(wa_rec_caal_old, wa_rec_caal_new)
+comparison_plot_wa <- together |>
+  dplyr::filter(freq > 0) |>
+  ggplot2::ggplot(aes(x = year, y = age, col = assessment, size = freq)) +
+  ggplot2::geom_point(position = position_dodge(0.5)) +
+  ggtitle("WA_REC CAAL Comparison")
+comparison_plot_wa
+  
+  #Save plot
+ggsave(plot = comparison_plot_wa, "wa_rec_caal_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 
 ```
 
 WA_REC: MAAL, WDFW ager data. Starting in 1998. includes MRFSS and OSP
+Some ages have changed 2004-2015 from previous assessment to our data
 
 ```{r}
+# Organize data into age bins. Make sure it's a single sex.
+wa_rec_maal <- get_raw_comps(
+  data = wa_ages_raw,
+  comp_bins = seq(0, 65, 1),
+  comp_column_name = "age",
+  input_n_method = "total_samples",
+  two_sex_comps = FALSE,
+  month = 7,
+  fleet = -7,
+  partition = 0,
+  ageerr = 1,
+  Lbin_lo = -1,
+  Lbin_hi = -1,
+  dir = NULL,
+  printfolder = "",
+  verbose = TRUE
+)
 
+# Make it a readable data frame
+wa_rec_maal <- data.frame(wa_rec_maal)
+colnames(wa_rec_maal) <- gsub("^unsexed\\.", "", colnames(wa_rec_maal))
+colnames(wa_rec_maal) <- gsub("^u", "A", colnames(wa_rec_maal))
+
+# Save
+write.csv(wa_rec_maal, file.path("../../Data/processed/rec_comps/wa_rec_maal.csv"))
+
+# Comparison plots for 1998-2024
+  # Read new data
+wa_rec_maal_new <- read.csv("../../Data/processed/rec_comps/wa_rec_maal.csv") |>
+  mutate(assessment = "Current") |>
+  dplyr::select(year, assessment, A0:A65) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("A", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age),
+  )
+
+# Read old data
+inputs_old <- r4ss::SS_read(dir = file.path("../../model/2017_yelloweye_model_updated_ss3_exe"))
+wa_rec_maal_old <- inputs_old$dat$agecomp |>
+  dplyr::filter(fleet == -7) |>
+  mutate(assessment = "Previous") |>
+  dplyr::select(year, assessment, Nsamp, `a0`:`a65`) |>
+  tidyr::pivot_longer(cols = c(-year, -assessment, -Nsamp), names_to = "age", values_to = "freq") |>
+  dplyr::mutate(age = gsub("^a", "", age)) |>
+  dplyr::group_by(year) |>
+  dplyr::mutate(
+    freq = freq / sum(freq),
+    age = as.numeric(age)
+  )
+
+  # Put the long data frames together and bubble plot!
+together <- rbind(wa_rec_maal_old, wa_rec_maal_new)
+comparison_plot_wa <- together |>
+  dplyr::filter(freq > 0) |>
+  ggplot2::ggplot(aes(x = year, y = age, col = assessment, size = freq)) +
+  ggplot2::geom_point(position = position_dodge(0.5)) +
+  ggtitle("WA_REC MAAL Comparison")
+comparison_plot_wa
+  
+  #Save plot
+ggsave(plot = comparison_plot_wa, "wa_rec_maal_comparisons.png", path = file.path("../../Rcode/length_age_comps"))
 ```
